[metadata]
license_files = LICENSE

[build_sphinx]
project = 'dramatiq-abort'

[tool:pytest]
testpaths = tests
addopts = --cov dramatiq_abort --cov-report html

[pep8]
max-line-length = 88

[flake8]
max-complexity = 18
max-line-length = 80
inline-quotes = double
multiline-quotes = double
ignore = E203, E266, E501, W503
select = B,C,E,F,W,T4,B9


[isort]
known_first_party = dramatiq_abort
order_by_type = true
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
python_version=3.7
platform=linux

# flake8-mypy expects the two following for sensible formatting
show_column_numbers=True

# show error messages from unrelated files
follow_imports=normal

# suppress errors about unsatisfied imports
ignore_missing_imports=True

# be strict
disallow_untyped_calls=True
warn_return_any=True
strict_optional=True
warn_no_return=True
warn_redundant_casts=True
warn_unused_ignores=True
disallow_any_generics=True

# The following are off by default.  Flip them on if you feel
# adventurous.
disallow_untyped_defs=True
check_untyped_defs=True

